welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase: error: not found: value growFlowers
		growFlowers();
                ^FlowerCase:1: error: not found: value fleur
def transitionPot(){gauche();avance();avance();droite();avance();avance();avance();avance();avance();avance();fleur(Color.blue);avance();gauche();avance();avance();droite()}
                                                                                                              ^FlowerCase:6: error: not found: value growFlowers
growFlowers()
^FlowerCase:8: error: not found: value growFlowers
growFlowers()
^FlowerCase:10: error: not found: value growflowers
growflowers()
^FlowerCase:12: error: not found: value growFlowers
growFlowers()
^